--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy Docker Image to Container
-  hosts: demo
+  hosts: all
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
