--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,8 @@
 ---
 - name: Deploy Docker Image to Container
   hosts: demo
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Pull Docker Image
       docker_image:
